--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -2996,6 +2996,8 @@ paper, we reported a \textbf{DF} value for a \textbf{process},
 we described our process very well, and the small contamination
 was a result of the process.
 
+\textbf{Also note that HNO\tsbs{3} is extracted, meaning}
+\textbf{our acid concentration is changing a little}
 
 %------------------------------------------------------------------------
 %	LAB BOOK day
@@ -3023,6 +3025,24 @@ on the pips detector.
 \item[\done]{Worked on project for NUEN647...still
   have a long way to go, but hopefully can finish in a
   week}
+\item[\done]{Also worked some on setting up my new computer
+  at home}
+\item[\done]{Worked some on trying to get insync working,
+  it is currently not working, that was frustrating}
+\item[\done]{Worked on encrypting information on linux systems,
+  wrote a program that will manage that some, but still need
+  to put some more time into it}
+\item[\done]{Also struggled a lot this break with issues of my family,
+  why is my family life so hard, why does my older brother yell at
+  my other brothers and mom, waving a gun around, why is my dad
+  still in prison 7 years after serving the judge appointed sentance
+  of 3 years...why is the place where he is staying so rude to him
+  so now he's lost sight in an eye. God took away Saul's sight for a
+  time, Jesus said to cast your eye from you if it causes you to sin.
+  Why can't I deal with these emotions of self hatered, and why do
+  I want to kill myself? I hate this, I hate this, I want to quit
+  but I'm afraid if I leave that it would break my family once again,
+  and I don't think they would recover from it}
 \end{todolist}
 
 %------------------------------------------------------------------------
