--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -3176,15 +3176,76 @@ me a while to work out the alpha analysis.
 \item[\done]{Update notebook}
 \item[\done]{Mess around some with some of the resuls to make
   them look better}
-\item{Compile things to present to meeting}
-\item{Talk about not working the month of December}
+\item[\done]{Compile things to present to meeting}
+\item{Talk about the upcoming months}
+  \begin{itemize}
+  \item{Concerned about alpha sample not giving reulsts expected,
+    after second extraction want to do alpha samples, but I want to
+    make sure I can get good alpha results for the first extraction,
+    problem is alpha samples take a while to count}
+  \item{Concerned about changing D-values, second extraction seems
+    to have different D-values for some elements, should I be concerned
+  about this?}
+  \item{Concerned about not making timeline, willing to work
+    without pay next semester but would like to finish coursework
+    this semester (failed course and current course), would like to
+    take December off}
+  \end{itemize}
+\item{Next steps}
+  \begin{itemize}
+  \item{Get alpha values working (I'm okayish with chaning D-values}
+  \item{Make alpha samples for first extraction}
+  \item{Third extraction}
+  \end{itemize}
 \end{todolist}
 
 
 \experiment{ResearchMeeting}
-
-
-
+Not chronological order.
+\begin{todolist}
+\item[\done]{Two extractions with larger volume}
+  \begin{itemize}
+  \item{Support low Cs extraction D-value}
+  \item{Other D-values similar to what we were getting before}
+  \end{itemize}
+\item[\done]{Reconcile first experiment of semester}
+  \begin{itemize}
+  \item{Forgot to subtract out background, changed ratio showed to 10\tss{-4}}
+  \item{Simulate process for first experiment, with assumed D value of 10\tss{-5},
+    the ratio from first to last solution, should be 10\tss{-4} - meaning
+    my experiments from this semester are...sort of consistent}
+  \end{itemize}
+\item[\done]{Reconcile published paper}
+  \begin{itemize}
+  \item{With 2.35 $\mu$l of aqueous in organic, which would be
+      0.43\% of the aqueous phase, All DF values (except 1) that we are
+      measuring by Gamma would be similiar (within error) to
+      what we are currently getting for D.}
+    \item{The exception is Ru, which would be consistent if we
+      were getting a D value of 0.01, instead we are getting a D-value
+      of 0.03-0.07. Which is a difference between 99\% and
+      93-97\%.}
+  \end{itemize}
+\item[\done]{Prepare alpha samples for first extraction}
+\item[\done]{Analyze alpha samples from first extraction}
+  \begin{itemize}
+  \item{Issue, what do I do about these terrible results?}
+  \item{Re-make alpha samples? and recount? will take some time}
+  \item{No activity balance}
+  \item{Really low organic counts}
+  \item{Should I wait on third extraction for this?}
+  \end{itemize}
+\item[\done]{Finish counts for first extraction}
+\item[\done]{Second extraction}
+\item[\done]{Count second extraction}
+\item[\done]{Analyze second extraction}
+  \begin{itemize}
+  \item{Much different D-values for three elements}
+  \end{itemize}
+\end{todolist}
+If everything worked out the first time, and made sense,
+things would move a lot quicker, problem is, there is
+always a problem. 
 
 
 %----------------------------------------------------------------------
