--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -3322,7 +3322,7 @@ always a problem.
 \experiment{Cycle_X3_round_2_alpha_ex2}
 
 \begin{todolist}
-\item{Label vials:
+\item[\done]{Label vials:
   $\boxed{8\ aqII\ Dillution}$,
   $\boxed{9\ aqII\ Dillution}$,
   $\boxed{10\ aqII\ Dillution}$,
@@ -3331,10 +3331,28 @@ always a problem.
   $\boxed{10\ orII\ Dillution}$.
   Do not label chips at this time, just dillute samples
   for mass spec}
-\item{Also transfer 3 red and 4 blue push caps for smaller vials}
-\item{Transfer all above vials and chips into glovebox}
+\item[\done]{Also transfer 3 red and 4 blue push caps for smaller vials}
+\item[\done]{Transfer all above vials and chips into glovebox}
+\item[\done]{Discovered (via Kevin) that each alpha sample
+  needs to be dilluted by a factor of 10,000 from the
+  original glovebox solution (not my initial)}
+\end{todolist}  
 
-  
+\experiment{School}
+
+\begin{todolist}
+\item{Dr. McClarrens project}
+\end{todolist}
+
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
+
+\labday{Friday 2, December 2016}
+
+\experiment{Cycle_X3_round_2_alpha_ex2}
+
+\begin{todolist}
 \item{Make alpha sample of each aqueous}
 \begin{todolist}
 \item{- $\boxed{8\ aqII}$}
@@ -3403,9 +3421,7 @@ always a problem.
 0.9+/-0.0089 ml of 30\% TBP $\boxed{10\ orII\ Dillution}$
 \end{center}
 
-
-\end{todolist}  
-
+\end{todolist}
 
 \experiment{Process_X3}
 
@@ -3419,6 +3435,9 @@ always a problem.
 \item{Do a third extraction of 56, measureing volume,
   and using the original TBP}
 \end{todolist}
+
+
+
 
 
 %----------------------------------------------------------------------
