--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -3341,7 +3341,11 @@ always a problem.
 \experiment{School}
 
 \begin{todolist}
-\item{Dr. McClarrens project}
+\item{Dr. McClarrens project for NUEN647}
+  \begin{itemize}
+  \item{But can't because doing research, I feel like
+  my professor is like, please fail your course.}
+  \end{itemize}
 \end{todolist}
 
 %------------------------------------------------------------------------
@@ -3353,91 +3357,224 @@ always a problem.
 \experiment{Cycle_X3_round_2_alpha_ex2}
 
 \begin{todolist}
-\item{Make alpha sample of each aqueous}
+\item[\done]{Asked a question while doing the experiment}
+  \begin{itemize}
+  \item{The final volume of all the calculations is correct,
+    and even though there is a large density change for the 10
+    $\mu$l of concentrated solution, it doesn't make a difference
+    in the final calculation}
+  \end{itemize}
+\item[\done]{Make alpha sample of each aqueous}
+  \begin{itemize}
+  \item{For 1000 0.6\% error, 500 1.0\% error, yellow top with
+    10 $\mu$l 3\% error}
+  \end{itemize}
 \begin{todolist}
-\item{- $\boxed{8\ aqII}$}
+\item[\done]{- $\boxed{8\ aqII}$}
 \end{todolist}
 \begin{center}
-10+/-0.12 $\mu$l of $\boxed{8\ aqII}$ (4 M HNO\tsbs{3}) [smaller pipette]\\
+10+/-0.3 $\mu$l of $\boxed{8\ aqII}$ (4 M HNO\tsbs{3}) [smaller pipette]\\
 +\\
-390+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+990+/-5.94 $\mu$l of DI water (leftover in glovebox)\\
 =\\
-0.4+/-0.0078 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{8\ aqII\ Dillution}$
+1.0+/-0.006 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{8\ aqII\ Dillution}$
 \end{center}
 
 \begin{todolist}
-\item{- $\boxed{9\ aqII}$}
+\item[\done]{- $\boxed{9\ aqII}$}
 \end{todolist}
 \begin{center}
-10+/-0.12 $\mu$l of $\boxed{9\ aqII}$ (4 M HNO\tsbs{3}) [smaller pipette]\\
+10+/-0.3 $\mu$l of $\boxed{9\ aqII}$ (4 M HNO\tsbs{3}) [smaller pipette]\\
 +\\
-390+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+990+/-5.9 $\mu$l of DI water (leftover in glovebox)\\
 =\\
-0.4+/-0.0078 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{9\ aqII\ Dillution}$
+1.0+/-0.006 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{9\ aqII\ Dillution}$
 \end{center}
 
 \begin{todolist}
-\item{- $\boxed{10\ aqII}$}
+\item[\done]{- $\boxed{10\ aqII}$}
 \end{todolist}
 \begin{center}
-10+/-0.12 $\mu$l of $\boxed{10\ aqII}$ (4 M HNO\tsbs{3}) [smaller pipette]\\
+10+/-0.3 $\mu$l of $\boxed{10\ aqII}$ (4 M HNO\tsbs{3}) [smaller pipette]\\
 +\\
-390+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
 =\\
-0.4+/-0.0078 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{10\ aqII\ Dillution}$
+1.0+/-0.006 ml of $\sim$ 0 M HNO\tsbs{3} $\boxed{10\ aqII\ Dillution}$
 \end{center}
+
 
 \item{Make alpha sample of each organic phase}
 \begin{todolist}
-\item{- $\boxed{8\ orII}$}
+\item[\done]{- $\boxed{8\ orII}$}
 \end{todolist}
 \begin{center}
-10+/-0.12 $\mu$l of $\boxed{8\ orII}$ (30\% TBP) [smaller pipette]\\
+10+/-0.3 $\mu$l of $\boxed{8\ orII}$ (30\% TBP) [smaller pipette]\\
 +\\
-890+/-8.9 $\mu$l of 30\% TBP (leftover in glovebox)\\
+990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
 =\\
-0.9+/-0.0089 ml of 30\% TBP $\boxed{8\ orII\ Dillution}$
+1.0+/-0.006 ml of 30\% TBP $\boxed{8\ orII\ Dillution}$
 \end{center}
 
 \begin{todolist}
-\item{- $\boxed{9\ orII}$}
+\item[\done]{- $\boxed{9\ orII}$}
 \end{todolist}
 \begin{center}
-10+/-0.12 $\mu$l of $\boxed{9\ orII}$ (30\% TBP) [smaller pipette]\\
+10+/-0.3 $\mu$l of $\boxed{9\ orII}$ (30\% TBP) [smaller pipette]\\
 +\\
-890+/-8.9 $\mu$l of 30\% TBP (leftover in glovebox)\\
+990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
 =\\
-0.9+/-0.0089 ml of 30\% TBP $\boxed{9\ orII\ Dillution}$
+1.0+/-0.006 ml of 30\% TBP $\boxed{9\ orII\ Dillution}$
 \end{center}
 
 \begin{todolist}
-\item{- $\boxed{10\ orII}$}
+\item[\done]{- $\boxed{10\ orII}$}
 \end{todolist}
 \begin{center}
-10+/-0.12 $\mu$l of $\boxed{10\ orII}$ (30\% TBP) [smaller pipette]\\
+10+/-0.3 $\mu$l of $\boxed{10\ orII}$ (30\% TBP) [smaller pipette]\\
 +\\
-890+/-8.9 $\mu$l of 30\% TBP (leftover in glovebox)\\
+990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
 =\\
-0.9+/-0.0089 ml of 30\% TBP $\boxed{10\ orII\ Dillution}$
+1.0+/-0.006 ml of 30\% TBP $\boxed{10\ orII\ Dillution}$
 \end{center}
 
 \end{todolist}
+
+\experiment{56_run}
+
+\begin{todolist}
+\item[\done]{Do a third extraction of 56, measureing volume,
+  and using the original TBP}
+  \begin{itemize}
+  \item{Measure $\boxed{56\ aqII}$ at 572 $\mu$l of aq}
+    \begin{itemize}
+    \item{We keep losing alot of Aq...why?!}
+    \item{Is the organic gaining in volume with nitrate going to
+    TBP?}
+    \end{itemize}
+  \item{Add 5.72 ml of TBP (first solution) to $\boxed{56\ AqII}$}
+  \item{Pulse 15 minutes on vortex mixer}
+  \item{Centrifuge for 15 minutes at 3,300 rpms with counter balance}
+  \end{itemize}
+\item[\done]{Make $\boxed{56\ AqIII}$ (15ml),
+  $\boxed{56\ OrIII\ Meas\ Vol}$ (50 ml),
+  $\boxed{56\ ORIII}$ (50 ml), and transfer into glovebox with smaller
+  pipette tips}
+\item[\done]{Separate phases of $\boxed{56\ AqII}$, put top phase
+  in $\boxed{56\ OrIII\ Meas\ Vol}$ and bottom phase in
+  $\boxed{56\ AqIII}$}
+\item[\done]{Separate top first, with disposable pipettes, and tried
+very hard to not cross contaminate anything}
+\item[\done]{Measured $\boxed{515}$ $\mu$l
+  in $\boxed{56\ AqIII}$!!!}
+  \begin{itemize}
+  \item{Went from 572 $\mu$l to 515 $\mu$l, what is going on?!,
+  I didn't lose a single drop.}
+  \end{itemize}
+\item[\done]{Measured volume of organic by transfering from
+  $\boxed{56\ OrIII\ Meas\ Vol}$ to $\boxed{56\ OrIII}$}
+  \begin{itemize}
+  \item{Measured a volume of 5.47 ml...how did we lose all that
+    volume (from 5.72)!}
+  \item{I did leave maybe like 0.5 ml in $\boxed{56\ AqII}$
+    (the interface), but still}
+  \end{itemize}
+\item[\done]{Take $\boxed{56\ OrIII}$ and $\boxed{56\ AqIII}$
+  out of glovebox}
+\item[\done]{Clean both vials, centrifuge 1 min 4,400 rpm}
+\item[\done]{Parafilm wrap both}
+\item[\done]{Start counting $\boxed{56\ OrIII}$ at 26 cm}
+\end{todolist}
+
+
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
+
+\labday{Saturday 3, December 2016}
+
+\experiment{School}
+
+\begin{todolist}
+\item[\done]{Worked on NUEN 647 project all day}
+\end{todolist}
+
+
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
+
+\labday{Sunday 4, December 2016}
+
+\experiment{School}
+
+\begin{todolist}
+\item[\done]{Worked on NUEN 647 project all day}
+\end{todolist}
+
+
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
+
+\labday{Monday 5, December 2016}
+
+\experiment{School}
+
+\begin{todolist}
+\item[\done]{Worked on NUEN 647 project all day}
+  \begin{itemize}
+  \item{I know its a work day, but technically I am only
+    getting paid for 20 hours a week.}
+  \item{Also, I shouldn't have to explain myself for doing
+    school work...}
+  \item{Project is due Tuesday, and guess what, its not
+    complete nor does it work}
+  \end{itemize}
+\end{todolist}
+
+
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
+
+\labday{Tuesday 6, December 2016}
+
+
+\experiment{56_run}
+
+\begin{todolist}
+\item[\done]{Finsih count $\boxed{56\ OrIII}$ at 26 cm}
+  \begin{itemize}
+  \item{The detector was being a little wonky with this,
+    at first the data was lost, then I opened up the
+    detector again and it was there...I hope its good?}
+  \end{itemize}
+\item[\done]{Start count $\boxed{56\ AqIII}$ at 26 cm}
+\end{todolist}
+
+\experiment{School}
+
+\begin{todolist}
+\item{Give final presentation for NUEN647}
+\end{todolist}
+
+\experiment{56_run}
+
+\begin{todolist}
+\item{Finsih count $\boxed{56\ AqIII}$}
+\item{Analyze results from 56 third extraction}
+  \begin{itemize}
+  \item{\textbf{School computer (not the one making these notes)
+    is not working. Its moving very slowly}}
+  \end{itemize}
+\end{todolist}
+
 
 \experiment{Process_X3}
 
 \begin{todolist}
 \item{Prepare samples for third extraction}
 \end{todolist}
-
-\experiment{56_run}
-
-\begin{todolist}
-\item{Do a third extraction of 56, measureing volume,
-  and using the original TBP}
-\end{todolist}
-
-
-
 
 
 %----------------------------------------------------------------------
