--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -111,6 +111,7 @@
   using combined aqueous series 5 and 6, 56}
 \newexperiment{Cycle_X3_round_2_alpha_ex2}{Cycle experiment, round 2,
   replicate of 3, ALPHA EXTRACTION II (also Mass Spec preparation)}
+\newexperiment{ToCheckout}{Things to Check}
 %\newexperiment{shorthand}{Description of the experiment}
 
 %----------------------------------------------------------------------
@@ -2687,7 +2688,8 @@ Second Contact...
   \end{itemize}
 \item[\done]{Vortex mix $\boxed{9\ aq}$ for 15 minutes on pulse mode}
 \item[\done]{Vortex mix $\boxed{10\ aq}$ for 15 minutes on pulse mode}
-\item[\done]{Centrifuge $\boxed{8}$, $\boxed{9}$, and $\boxed{10}$
+\item[\done]{Centrifuge $\boxed{8\ aq}$, $\boxed{9\ aq}$,
+  and $\boxed{10\ aq}$
   with $\boxed{Buddy}$ on 3300 rpm, for 5 minutes}
 \item{\st{During the vortex mixing and the centrifuge
   practice the transfer in the fumehood} Prayed instead}
@@ -3364,7 +3366,7 @@ always a problem.
     $\mu$l of concentrated solution, it doesn't make a difference
     in the final calculation}
   \end{itemize}
-\item[\done]{Make alpha sample of each aqueous}
+\item[\done]{Make dilution of each aqueous}
   \begin{itemize}
   \item{For 1000 0.6\% error, 500 1.0\% error, yellow top with
     10 $\mu$l 3\% error}
@@ -3403,7 +3405,7 @@ always a problem.
 \end{center}
 
 
-\item{Make alpha sample of each organic phase}
+\item{Make dilution of each organic phase}
 \begin{todolist}
 \item[\done]{- $\boxed{8\ orII}$}
 \end{todolist}
@@ -3555,27 +3557,266 @@ very hard to not cross contaminate anything}
 \experiment{School}
 
 \begin{todolist}
-\item{Give final presentation for NUEN647}
+\item[\done]{Give final presentation for NUEN647}
+  \begin{itemize}
+  \item{Should have sampled from the covariance matrix,
+  how exactly do I do that?}
+  \item{Didn't complete the project, but its okay}
+  \item{Now all that is left is the final homework}
+  \end{itemize}
 \end{todolist}
 
 \experiment{56_run}
 
 \begin{todolist}
-\item{Finsih count $\boxed{56\ AqIII}$}
-\item{Analyze results from 56 third extraction}
+\item[\done]{Finsih count $\boxed{56\ AqIII}$}
+\item[\done]{Analyze results from 56 third extraction}
   \begin{itemize}
   \item{\textbf{School computer (not the one making these notes)
-    is not working. Its moving very slowly}}
+      is not working. Its moving very slowly}}
+  \item{Uninstalled CE, fixed it. IT people said that they
+    installed malware software, so programs were interfering
+    with one another}
   \end{itemize}
+\item[\done]{Combine $\boxed{56\ OrII}$,
+  $\boxed{56\ OrIII}$, $\boxed{5\ Or}$, $\boxed{6\ Or}$,
+  $\boxed{5\ OrII}$, $\boxed{6\ OrII}$, into $\boxed{56\ Or}$.
+  Stored in fume hood for now, parafilm wrap}
+\item[\done]{Combine $\boxed{5}$, $\boxed{6}$, $\boxed{7}$,
+  $\boxed{5\ AqII}$, $\boxed{6\ AqII}$,
+  into $\boxed{567\ A}$ store in fumehood, parafilm wrap}
+\item[\done]{Combine $\boxed{56\ mix}$, $\boxed{56\ mixII}$,
+  $\boxed{1}$ into $\boxed{56\ Aq II}$ leave in glovebox}
 \end{todolist}
 
 
 \experiment{Process_X3}
 
 \begin{todolist}
-\item{Prepare samples for third extraction}
+\item[\done]{Transfer $\boxed{8\ Or}$, $\boxed{9\ Or}$,
+    $\boxed{10\ Or}$ into glovebox}
+\item[\done]{Combine all organic phases for each respective experiment}
+  \begin{itemize}
+  \item{$\boxed{8\ OrII}$, $\boxed{8\ OrII\ C}$,
+    and $\boxed{8\ Or\ C}$, into $\boxed{8\ Or}$ with clear push
+    cap}
+  \item{$\boxed{9\ OrII}$, $\boxed{9\ OrII\ C}$,
+    and $\boxed{9\ Or\ C}$, into $\boxed{9\ Or}$ with clear push
+    cap}
+  \item{$\boxed{10\ OrII}$, $\boxed{10\ OrII\ C}$,
+    and $\boxed{10\ Or\ C}$, into $\boxed{10\ Or}$ with clear push
+    cap}
+  \end{itemize}
+\item[\done]{Combine all aqueous phases for each respective experiment}
+  \begin{itemize}
+  \item{$\boxed{8\ AqII\ C}$ into $\boxed{8\ AqII}$}
+    \item{$\boxed{9\ AqII\ C}$ into $\boxed{9\ AqII}$}
+  \end{itemize}
+\item[\done]{Take out trash and consolodate waste, put in new waste
+  bag}
+\item[\done]{Clean gloves and pipette in glovebox}
 \end{todolist}
 
+\experiment{ToCheckout}
+
+\begin{todolist}
+\item{Ru paper}
+\item{Check if using interface for second extraction
+  interfered with results for 8,9, 10 experiment}
+\item[\done]{Wrote the procedure for tomorrow}
+\item{Modified second extraction,
+  which had 248 ml for $\boxed{8\ aqII\ C}$}
+\item{Make new picture to include making diluted samples}
+\end{todolist}
+
+
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
+\labday{Wednesday 7, December 2016}
+
+Note...second extraction had 248 ml for $\boxed{8\ aqII\ C}$
+change in notebook!
+Make new picture to include making diluted samples.
+
+\experiment{Process_X3}
+
+Third contact
+
+\begin{todolist}
+
+\item{Label vials,
+  $\boxed{8\ aqIII}$,  $\boxed{8\ aqIII\ C}$,  $\boxed{8\ orIII}$,
+  $\boxed{8\ orIII\ C}$
+  $\boxed{9\ aqIII}$,  $\boxed{9\ aqIII\ C}$,  $\boxed{9\ orIII}$,
+  $\boxed{9\ orIII\ C}$
+  $\boxed{10\ aqIII}$, $\boxed{10\ aqIII\ C}$, $\boxed{10\ orIII}$,
+  $\boxed{10\ orIII\ C}$,
+  $\boxed{8\ aqIII\ Dillution}$,
+  $\boxed{9\ aqIII\ Dillution}$,
+  $\boxed{10\ aqIII\ Dillution}$,
+  $\boxed{8\ orIII\ Dillution}$,
+  $\boxed{9\ orIII\ Dillution}$,
+  $\boxed{10\ orIII\ Dillution}$ (smaller 2.5 ml tubes)
+  $\boxed{8\ mixIII}$, $\boxed{9\ mixIII}$,
+    $\boxed{10\ miIIIx}$ (smaller 1 ml tubes from John Burns,
+    have conical bottoms, makes more minute separations easier)}
+
+\item{Transfer:
+  $\boxed{8\ aqIII}$,  $\boxed{8\ aqIII\ C}$,  $\boxed{8\ orIII}$,
+  $\boxed{8\ orIII\ C}$
+  $\boxed{9\ aqIII}$,  $\boxed{9\ aqIII\ C}$,  $\boxed{9\ orIII}$,
+  $\boxed{9\ orIII\ C}$
+  $\boxed{10\ aqIII}$, $\boxed{10\ aqIII\ C}$, $\boxed{10\ orIII}$,
+  $\boxed{10\ orIII\ C}$,
+    $\boxed{8\ aqIII\ Dillution}$,
+  $\boxed{9\ aqIII\ Dillution}$,
+  $\boxed{10\ aqIII\ Dillution}$,
+  $\boxed{8\ orIII\ Dillution}$,
+  $\boxed{9\ orIII\ Dillution}$,
+  $\boxed{10\ orIII\ Dillution}$,
+  $\boxed{8\ mixIII}$, $\boxed{9\ mixIII}$,
+  $\boxed{10\ miIIIx}$.
+  (3 clear push caps, and 6 blue push caps
+  6 red push caps). Also with 3 15 ml centrifuge tubes (already
+  have three in the glovebox)}
+
+\item{Measure volumes of all aqueous phases, $\boxed{8\ aqII}$
+     $\boxed{9\ aqII}$, $\boxed{10\ aqII}$}
+\begin{table}[H]
+  \begin{center}
+    \caption{Volumes for combined aqueous phases}
+    \begin{tabular}{l l l}
+      \toprule
+      Series & Aqueous (8,9, or 10)\\ 
+      8 &  +/- \\
+      9 &  +/- \\
+      10 & +/- \\
+      \bottomrule
+    \end{tabular}
+  \end{center}
+\end{table}  
+\
+\item{Add XX $\mu$l of $\boxed{TBP}$ to $\boxed{8\ aqII}$}
+\item{Add XX $\mu$l of $\boxed{TBP}$ to $\boxed{9\ aqII}$}
+\item{Add XX $\mu$l of $\boxed{TBP}$ to $\boxed{10\ aqII}$}
+\item{Vortex mix $\boxed{8\ aqII}$ for 15 minutes on pulse mode}
+\item{Vortex mix $\boxed{9\ aqII}$ for 15 minutes on pulse mode}
+\item{Vortex mix $\boxed{10\ aqII}$ for 15 minutes on pulse mode}
+
+\item{Centrifuge $\boxed{8\ aqII}$, $\boxed{9\ aqII}$,
+  and $\boxed{10\ aqII}$
+  with $\boxed{Buddy}$ on 3300 rpm, for 5 minutes}
+
+\item{Pipette with disposable pipette the organic phase
+  first, then the aqueous (for all three vials),
+  (also used different disposable pipettes for the
+  different phases - no contamination)
+  as much as so that there is no mixing.
+  Then transferred the boundary to a smaller vial, let sit.
+  Prepare counting solutions of 250 $\mu$l of each of the solutions
+  A picture will be provided for the whole process for
+  $\boxed{8\ aqII}$
+  on the following page
+  , also make dilution of each of the phases. Directly below
+  are notes for what happened in the initial transfer,
+  and below that are notes for the dilution.}
+  \begin{itemize}
+    \item{notes}\vspace{3cm}
+  \end{itemize}
+  
+\item{Make dilution of each aqueous}
+  \begin{todolist}
+  \item{- $\boxed{8\ aqIII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{8\ aqIII}$
+    (4 M HNO\tsbs{3}) [smaller pipette]\\
+    +\\
+    990+/-5.94 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of $\sim$
+    0 M HNO\tsbs{3} $\boxed{8\ aqIII\ Dillution}$
+  \end{center}
+  \begin{todolist}
+  \item{- $\boxed{9\ aqIII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{9\ aqIII}$
+    (4 M HNO\tsbs{3}) [smaller pipette]\\
+    +\\
+    990+/-5.9 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of $\sim$
+    0 M HNO\tsbs{3} $\boxed{9\ aqIII\ Dillution}$
+  \end{center}
+  \begin{todolist}
+  \item{- $\boxed{10\ aqIII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{10\ aqIII}$
+    (4 M HNO\tsbs{3}) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of DI water (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of $\sim$
+    0 M HNO\tsbs{3} $\boxed{10\ aqIII\ Dillution}$
+  \end{center}
+
+\item{Make dilution of each organic phase}
+  \begin{todolist}
+  \item{- $\boxed{8\ orIII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{8\ orIII}$
+    (30\% TBP) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of 30\% TBP $\boxed{8\ oriII\ Dillution}$
+  \end{center}
+  \begin{todolist}
+  \item{- $\boxed{9\ orIII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{9\ orIII}$
+    (30\% TBP) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of 30\% TBP $\boxed{9\ orIII\ Dillution}$
+  \end{center}
+
+  \begin{todolist}
+  \item{- $\boxed{10\ orIII}$}
+  \end{todolist}
+  \begin{center}
+    10+/-0.3 $\mu$l of $\boxed{10\ orIII}$
+    (30\% TBP) [smaller pipette]\\
+    +\\
+    990+/-7.8 $\mu$l of 30\% TBP (leftover in glovebox)\\
+    =\\
+    1.0+/-0.006 ml of 30\% TBP $\boxed{10\ orIII\ Dillution}$
+  \end{center}
+ 
+\item{Transfer out $\boxed{8\ orIII\ C}$, $\boxed{8\ aqIII\ C}$,
+  $\boxed{9\ orIII\ C}$, $\boxed{9\ aqIII\ C}$, $\boxed{10\ orIII\ C}$,
+  $\boxed{10\ aqIII\ C}$, in 15 ml centrifuge tubes}
+\item{Radiac wash the above tubes, and store in fumehood behind
+  lead - wait to count}
+\item{Clean stuff in glovebox}
+\item{Start count $\boxed{8\ aqIII\ C}$ at 26 cm TIME}
+ 
+\end{todolist}
+
+\begin{figure}[H] % Example of including images
+\begin{center}
+  \includegraphics[width=0.8\linewidth]
+                  {Figures/Cycle_x3_round_2_extraction_2}
+\end{center}
+\caption{Extraction three times round 2 extraction 3}
+\label{fig:round2_extraction2}
+\end{figure}
 
 %----------------------------------------------------------------------
 %	Examples
